manually merge in latest changes and add gitignore