@@ -3,9 +3,9 @@
 Kudos to Volker Simonis for the original patch, he continues to amaze and
 delight in the Java industry :-) - Original patch at https://github.com/corretto/hotpatch-for-apache-log4j2
 
-This is a simple tool which injects a Java agent into a running JVM process. The agent will patch the `lookup()` method of all loaded `org.apache.logging.log4j.core.lookup.JndiLookup` instances to unconditionally return the string "Patched JndiLookup::lookup()". This should fix the [CVE-2021-44228](https://www.randori.com/blog/cve-2021-44228/) remote code execution vulnerability in Log4j without restarting the Java process.
+This is a tool which injects a Java agent into a running JVM process. The agent will attempt to patch the `lookup()` method of all loaded `org.apache.logging.log4j.core.lookup.JndiLookup` instances to unconditionally return the string "Patched JndiLookup::lookup()". It is designed to address the [CVE-2021-44228](https://www.randori.com/blog/cve-2021-44228/) remote code execution vulnerability in Log4j without restarting the Java process.
 
-This has been currently only tested with JDK 8 & 11 on Linux!
+The dynamic and static agents are known to run on JDK 8 & 11 on Linux whereas on JDK 17 only the static agent is working (see below).
 
 ## Building
 
@@ -43,6 +43,15 @@ java Log4jHotPatch <java-pid>
 Simply add the agent to your java command line as follows:
 ```
 java -classpath <class-path> -javaagent:Log4HotjPatch.jar <main-class> <arguments>
+```
+
+To make this tool as simple and self-contained as possible, it uses OpenJDK's internal 
+copy of the [ObjectWeb ASM](https://asm.ow2.io/) library in the target JVM. 
+In JDK 17 the strong encapsulation of this library can only be bypassed with a 
+command line option. This is why the reason why applications running on JDK 17 
+can currently only be patched with the static version of the agent:
+```
+java --add-exports=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED -classpath <class-path> -javaagent:Log4HotjPatch.jar <main-class> <arguments>
 ```
 
 ## Known issues
